--- a/main.html
+++ b/main.html
@@ -243,9 +243,9 @@
         <div id="research-bar-moth-ico"><img src="image/logo.gif" ></div>
         <div id="research-search">
             <div  id="research-bar-top">
-                <a   class="search-bao research-font" href="#">宝贝</a>
-                <a   class="search-tian research-font" href="#">天猫</a>
-                <a   class="search-dian research-font" href="#">店铺</a>
+                <a   class="research-font" href="#" id="search-bao">宝贝</a>
+                <a   class="research-font" href="#" id="search-tian">天猫</a>
+                <a   class="research-font" href="#" id="search-dian">店铺</a>
 
             </div>
             <div  id="search-bot-bar"><span id="search-ico"></span><span id="sou_font">有山有水的生态鱼缸，赏心悦目妥妥哒~</span>
