create new search bar

--- a/main.html
+++ b/main.html
@@ -248,7 +248,9 @@
                 <a   class="research-font" href="#" id="search-dian">店铺</a>
 
             </div>
-            <div  id="search-bot-bar"><span id="search-ico"></span><span id="sou_font">有山有水的生态鱼缸，赏心悦目妥妥哒~</span>
+            <div  id="search-bot-bar"><input type="text" id="input_text" >
+                <div id="search-bot-bar-icon"><img src="image/search.gif"></div>
+                <lable id="search-bot-bar-face">沙发也要焕然一新～</lable>
             </div>
             <a href="#" id="font-sch">搜索</a>
             <a href="#" id="font-gsch">高级搜索</a>
